# ruwi

./: Cargo.toml  README.md  cachegrind.out  fzf  heaptrack.ruwi.371779.zst  heaptrack.ruwi.372090.zst  heaptrack.ruwi.375426.zst  heaptrack.ruwi.377758.zst  heaptrack.ruwi.381090.zst  lawl  massif.out.290711  massif.out.368086  massif.out.368333  massif.out.84276  perf.data  perf.data.old
ci/configs/: hostapd_wlan0_bravery_open.conf  hostapd_wlan1_cowardice_wpa.conf
src/: annotate_networks.rs  check_known_identifiers.rs  cmdline_parser.rs  common.rs  configure_network.rs  connect.rs  conversion.rs  display_network_for_selection.rs  encryption_key.rs  enums.rs  errors.rs  find_known_network_names.rs  get_default_interface.rs  initialize.rs  interface_management.rs  lib.rs  macros.rs  main.rs  netctl_config_writer.rs  output.rs  parse.rs  password_prompt.rs  prelude.rs  run_commands.rs  runner.rs  scan.rs  select.rs  select_interface.rs  select_network.rs  select_utils.rs  service_management.rs  sort_networks.rs  structs.rs  strum_utils.rs  synchronous_retry_logic.rs  utils.rs  wpa_cli_initialize.rs
src/bluetooth/: mod.rs  utils.rs
tests/: test_basic_integration_tests.rs  test_cli_help.rs  test_full_integration_with_archlinux_vm.rs  test_full_integration_with_vm.rs  test_fzf_ctrl_c_exits.rs  test_fzf_integration_tests.rs  test_fzf_respects_ctrl_r_refresh.rs  test_fzf_respects_refresh_string_refresh.rs  test_help.rs  test_iw_first_network_from_file.rs  test_iw_fourth_of_many_networks_with_fzf.rs  test_root_safety.rs  test_selection_nocurses.rs  utils.rs
(+110 files in other folders)
