[package]
name = "ruwi"
version = "0.1.0"
authors = ["Glenn Hope <glenn.alexander.hope@gmail.com>"]
edition = "2018"

# [profile.release]
# debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
strum = "0.16.0"
strum_macros = "0.16.0"
unescape = "0.1.0"
typed-builder = "0.4"

[dev-dependencies]
rexpect = "0.3"
